refactor: refatoração completa do módulo fiscal e integração com SEFAZ
- Centralização da lógica de emissão no NotaFiscalServiceImpl
- Implementação de DTOs padronizados com Lombok (CriarNotaRequest, FilterNotaFiscalDTO)
- Padronização do tratamento de erros com ApiException e ApiResponse
- Adição de suporte a mTLS para comunicação com Webservices da SEFAZ
- Implementação de fallback triplo para consulta de CEP (ViaCEP, BrasilAPI, Postmon)
- Refatoração da entidade NotaFiscal para suporte a cálculos de impostos e status de contingência